# Tensorboard-Wrapper

./: .gitattributes  .gitignore  .pylintrc  Exceptions.py  MANIFEST.in  README.md  Tensorboard.py  Test.py  requirements.txt  setup.cfg  setup.py  test.py
.github/workflows/: pullrequest.yml  python-publish.yml
scripts/: build_minor.sh
tensorboard-wrapper/: Test.py
tensorboard_wrapper/: __init__.py  _version.py  exceptions.py  tensorboard.py
tests/: test_tensorboard.py
