
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = ./tensorboard_wrapper/_version.py
versionfile_build = tensorboard_wrapper/_version.py
tag_prefix = tw-
parentdir_prefix = tensorboard_wrapper-

[options]
packages = find:
install_requires=
    numpy
    tensorboard==1.15
