[metadata]
name = tensorboard-wrapper
version = 0.2.0
author = Nathan Gavenski
author_email = nathangavenski@gmail.com
description = Wrapper for Tensorflow's TensorBoard
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NathanGavenski/Tensorboard-Wrapper
project_urls = https://github.com/NathanGavenski/Tensorboard-Wrapper
bug tracker = https://github.com/NathanGavenski/Tensorboard-Wrapper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = tensorboard_wrapper
packages = find:
python_requires = >=3.9
install_requires=
    numpy
    tensorboard

[options.packages.find]
where=tensorboard_wrapper
